# VD_games

./: pyproject.toml  ruff.toml
VD_games/: cli.py  engine.py
VD_games/games/: __init__.py  calc.py  even.py  gcd.py  prime.py  progression.py
VD_games/scripts/: VD_calc.py  VD_even.py  VD_gcd.py  VD_prime.py  VD_progression.py
