[project]
name = "vd-games"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "prompt>=0.4.1",
]

[project.scripts]
VD-games = "VD_games.cli:main"
VD-even = "VD_games.scripts.VD_even:run_game"
VD-calc = "VD_games.scripts.VD_calc:run_game"
VD-gcd = "VD_games.scripts.VD_gcd:run_game"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]
